<resources>
    <string name="app_name">Blackjack</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Play">Play</string>
    <string name="Hit">Hit</string>
    <string name="Stand">Stand</string>

    <string name="buttonbet50">$50</string>
    <string name="buttonbet25">$25</string>
    <string name="HandsWon">HandsWon</string>
    <string name="Pool">Pool</string>
    <string name="CardDescription">Card Image</string>
    <string name="buttonbet100">$100</string>
    <string name="onClickHit">hitButton</string>
    <string name="onClickStay">stayButton</string>
    <string name="onClickBet25">betButton25</string>
    <string name="onClickBet50">betButton50</string>
    <string name="onClickBet100">betButton100</string>


</resources>